# flask-applications

./: .replit  LICENSE  README.md  app.py  pyproject.toml
templates/: home.html  jobfor.html
